Fix potentially uninitialized nsresult return value, regression from deCOMtamination patch.  b=330305  r+sr=roc